# insta-review

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/desktop/src/: coach.js  extractor.js  index.html  main.js  player.js  style.css  timeline.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: analysis.rs  commands.rs  engine.rs  main.rs  state.rs
crates/ir-analysis/: Cargo.toml
crates/ir-analysis/assets/prompts/: coach.system.md  coach.user.md
crates/ir-analysis/src/: config.rs  lib.rs  parse.rs  prompt.rs  store.rs  types.rs
crates/ir-analysis/src/cv/: flow.rs  gsi_motion.rs  mod.rs  motion.rs  ocr.rs
crates/ir-analysis/src/llm/: claude.rs  codex.rs  mod.rs
crates/ir-cli/: Cargo.toml
crates/ir-cli/src/: main.rs
crates/ir-core/: Cargo.toml
crates/ir-core/src/: clock.rs  config.rs  engine.rs  lib.rs  markers.rs  pipeline.rs  ring.rs  snapshot.rs
crates/ir-core/tests/: ring_props.rs
crates/ir-demo/: Cargo.toml
crates/ir-demo/src/: lib.rs
crates/ir-gsi/: Cargo.toml
crates/ir-gsi/src/: derive.rs  install.rs  lib.rs  model.rs  server.rs
crates/ir-mux/: Cargo.toml
crates/ir-mux/src/: lib.rs
crates/ir-pipeline-test/: Cargo.toml
crates/ir-pipeline-test/src/: annexb.rs  lib.rs  pattern.rs
crates/ir-pipeline-test/tests/: roundtrip.rs
crates/ir-pipeline-win/: Cargo.toml
crates/ir-pipeline-win/src/: convert.rs  lib.rs  mf_encoder.rs  pipeline.rs
crates/ir-types/: Cargo.toml
crates/ir-types/src/: lib.rs
crates/ir-winutil/: Cargo.toml
crates/ir-winutil/src/: focus.rs  hotkey.rs  lib.rs
