[workspace]
resolver = "2"
members = [
    "crates/ir-types",
    "crates/ir-core",
    "crates/ir-mux",
    "crates/ir-pipeline-test",
    "crates/ir-pipeline-win",
    "crates/ir-gsi",
    "crates/ir-winutil",
    "crates/ir-cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ir-types = { path = "crates/ir-types" }
ir-core = { path = "crates/ir-core" }
ir-mux = { path = "crates/ir-mux" }
ir-pipeline-test = { path = "crates/ir-pipeline-test" }
ir-pipeline-win = { path = "crates/ir-pipeline-win" }
ir-gsi = { path = "crates/ir-gsi" }
ir-winutil = { path = "crates/ir-winutil" }

bytes = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
