[package]
name = "ir-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI aim/movement coaching: analysis orchestration, LLM CLI providers, run persistence"

[dependencies]
ir-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
