[package]
name = "ir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ir-cli"
path = "src/main.rs"

[dependencies]
ir-types.workspace = true
ir-core.workspace = true
ir-mux.workspace = true
ir-pipeline-test.workspace = true
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
tracing.workspace = true
tracing-subscriber.workspace = true
