[package]
name = "ir-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ir-types.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"
