[package]
name = "ir-gsi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ir-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tiny_http = "0.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[[bin]]
name = "gsi-sim"
path = "src/bin/gsi_sim.rs"
