[package]
name = "ir-winutil"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }
